<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/Linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/linear1"
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/linear2"
            android:minHeight="48dp"
            android:inputType="textEmailSubject"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Linear3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|right|center_vertical"
            android:layout_weight="1"
            android:hint="@string/linear3"
            android:autofillHints=""
            android:inputType="textLongMessage"
            tools:ignore="RtlHardcoded,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/Linear4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/linear4"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>